--- a/projects/mastering-tinkering/lectures.html
+++ b/projects/mastering-tinkering/lectures.html
@@ -211,6 +211,7 @@
 
         </article>
     </div> 
+    <script src="../../script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
