--- a/projects/portfolio-2026/index.html
+++ b/projects/portfolio-2026/index.html
@@ -191,5 +191,6 @@ if (!activeParticles) cancelAnimationFrame(animationId);
     </div>
     
     <div style="height: 100px;"></div>
+    <script src="../../script.js"></script>
 </body>
 </html>
