Improvements on mastering-tinkering, hospital at home and portfolio projects. Also made it work on all screens including mobile burger menu etc

--- a/projects/mastering-tinkering/index.html
+++ b/projects/mastering-tinkering/index.html
@@ -52,6 +52,10 @@
             </div>
         </div>
 
+        <button class="burger-btn" aria-label="Toggle menu">
+            <span></span><span></span><span></span>
+        </button>
+
         <div class="links">
             <a href="../../projects.html">Projects</a>
             <a href="../../about.html">About</a>
@@ -90,8 +94,7 @@
             </div>
             <h2>Portfolio Setup</h2>
             <p>
-                The goal was to set up a simple and practical online portfolio. I chose to build a custom solution 
-                using HTML5 and GitHub Pages to demonstrate my web development skills.
+                The goal was to set up a simple and practical online portfolio for the course. I decided to use this assignment as an opportunity to build my whole professional portfolio rather than just a course page. I used HTML5 and GitHub Pages to create this entire website, so everything you see here beyond this specific course represents work that came out of this portfolio project. It let me showcase my web development skills while having a proper home for all my creative work.
             </p>
 
             <div class="tinker-card" style="max-width: 500px; margin: 30px auto;">
@@ -106,7 +109,7 @@
             </div>
             <h2>Tinkering Spaces (Photo Safari)</h2>
             <p>
-                A look at the three environments where I spend most of my time creating, learning, and experimenting.
+                For this assignment I thought back to places where I used to tinker and that were meaningful to me. I was thinking less about physical tinkering and more about the spaces where I tinker mentally with ideas and problems. Each space represents a different mode of thinking and making, all of which have influenced how I approach design.
             </p>
 
             <div class="gallery-grid">
@@ -150,6 +153,9 @@
             <h2>Design a Building Block: Screw Shapes</h2>
             <p>
                 <strong>Challenge:</strong> Design a block that can be used for tinkering and quick prototyping.
+            </p>
+            <p>
+                I went through around ten different design concepts, trying out various ways to connect pieces. I experimented with flexible connections, rigid ones, permanent attachments, and temporary ones. I ended up combining ideas from my 9th and 10th sketches, and settled on a screw based design. I chose screws because they're really good for quick iteration. You can swap different shapes and sizes in and out really fast, but they're still strong enough to hold things together properly. Unlike permanent connections, you can quickly take them apart and rebuild, which is what makes them good for tinkering. I also used AI to generate some 3D renderings to visualize how the design would actually look and work.
             </p>
 
 <div class="carousel-container">
@@ -300,6 +306,10 @@
                     </tbody>
                 </table>
             </div>
+
+            <p>
+                What struck me most was that LittleBits was the best one for actually tinkering around with, especially if you don't have any prior knowledge or expertise. It just made you curious and want to figure out what was possible. The Minecraft kit, on the other hand, felt more like a marketing product than something designed for real hands-on exploration.
+            </p>
 
             <p style="color: #9ca3af; font-style: italic; border-left: 2px solid #2dd4bf; padding-left: 15px;">
                 For more context, hands-on photos, and details of our experiments with these specific kits, please see my <a href="lectures.html#lec-2" style="color: #a78bfa; text-decoration: underline; font-weight: 500;">Lecture 2 Log</a>.
