--- a/projects/mastering-tinkering/lectures.html
+++ b/projects/mastering-tinkering/lectures.html
@@ -51,6 +51,10 @@
             </div>
         </div>
 
+        <button class="burger-btn" aria-label="Toggle menu">
+            <span></span><span></span><span></span>
+        </button>
+
         <div class="links">
             <a href="../../projects.html">Projects</a>
             <a href="../../about.html">About</a>
